- Fixade horisontell overflow - Satte padding på main och tog bort sid-margin på .img-container

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body, html {
     padding: 0;
     font-family: 'Segoe UI';
     font-weight: 300;
+    overflow-x: hidden;
 }
 
 h1{
@@ -88,12 +89,13 @@ i{
 
 main{
     margin: 70px auto 0 auto;
-    max-width: 100%;
+    padding: 0 10px;
+    max-width: 800px;
 }
 
 .img-container{
     width: 100%;
-    margin: 15px 10px;
+    margin: 10px 0;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.281);
     transition: box-shadow .2s;
 }
